--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ author:
   uri              : # URL
   email            : "nine6642@gmail.com" 
 
-  # Academic websites
+  # Academic websites 
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : #
   impactstory      : # URL
   orcid            : "http://orcid.org/yourorcidurl"
   semantic         : # URL
