--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "tomoe1046.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/Siraphat_profile.jpg"
+  avatar           : "Siraphat_profile.jpg"
   name             : "Siraphat Supatthananon"
   pronouns         : # example: "she/her"  
   bio              : "My name is Siraphat Supatthananon But you can call me nine "
